# face_recognize

./: CMakeLists.txt  README.md
src/: main.cpp  mobilefacenet.cpp  mobilefacenet.h  mtcnn.cpp  mtcnn.h
